[gd_scene load_steps=6 format=3 uid="uid://jbdwfx2nid4t"]

[ext_resource type="Texture2D" uid="uid://c3im1gvtax6yy" path="res://Ressources/UI/star_progress.png" id="1_sheme"]
[ext_resource type="Script" path="res://Scenes/UI_Overlays_ingame/star_progress_scene.gd" id="2_1bpun"]
[ext_resource type="Texture2D" uid="uid://c7jvcta864y3i" path="res://Ressources/UI/progress.png" id="3_nskvy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qrb6y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4oc52"]
bg_color = Color(0.636798, 0.529454, 0.999997, 1)

[node name="StarPrgoressScene" type="TextureRect"]
offset_left = 1862.0
offset_top = 14.0
offset_right = 2151.0
offset_bottom = 2652.0
scale = Vector2(0.137528, 0.137528)
texture = ExtResource("1_sheme")
script = ExtResource("2_1bpun")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -13.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="ProgressBar2" type="TextureProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -13.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("3_nskvy")

[node name="DamageBar" type="ProgressBar" parent="ProgressBar2"]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_qrb6y")
theme_override_styles/fill = SubResource("StyleBoxFlat_4oc52")
value = 70.0
fill_mode = 3

[node name="Timer" type="Timer" parent="ProgressBar2"]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="ProgressBar2/Timer" to="." method="_on_timer_timeout"]
